fix: making bg images relative to main instead of body to prevent overflow on mobile

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@ body {
   position: relative;
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
   font-family: "Kumbh Sans", sans-serif;
   color: var(--blue-900);
   font-weight: 600;
@@ -25,6 +24,8 @@ main {
   display: grid;
   place-items: center;
   padding: 1rem;
+  overflow: hidden;
+  position: relative;
 }
 
 .bg-top,
